tests/NormalTests/paczka1/fuzzy1/95797173.err
Error in line 12: A881 A881 29,o
Error in line 13: XM5sn A881 6,9
Error in line 17: A881 A881 136,1
Error in line 31: XM5sn S921 137,4
